# hoo

./: .gitignore  Cargo.toml  Makefile.toml  README.md  TODO.md  hoo.code-workspace  hoo.sh  hood.sh
hoo/: Cargo.toml
hoo/src/: animation.rs  effects.rs  lib.rs  light_controller.rs
hoo/src/effects/: random.rs  rotate.rs
hoo_api/: Cargo.toml
hoo_api/src/: color.rs  connection.rs  error.rs  lib.rs  light.rs  motion.rs
hoo_api/src/connection/: standard.rs  testing.rs
hoo_api_types/: Cargo.toml
hoo_api_types/src/: lib.rs  light.rs
hoo_base/: Cargo.toml
hoo_base/src/: animation.rs  config.rs  lib.rs  light_controller.rs
hoo_base/src/animation/: builder.rs  builtins.rs  dynamic.rs  effects.rs  looping.rs
hoo_base/src/animation/builtins/: random.rs  rotate.rs  sleepy_random.rs
hoo_base/src/animation/dynamic/: configurable_value.rs  operation.rs  producer.rs  transform.rs  value.rs
hoo_base/src/animation/effects/: random.rs
hoo_base/src/animation_old/effects/: random.rs  rotate.rs
hoo_base/src/effects/: rotate.rs
hoo_cli/: Cargo.toml
hoo_cli/src/: main.rs  options.rs
hoo_frontend/: Cargo.toml  Makefile.toml  README.md  index.html  main.js  package-lock.json  package.json  prettier.config.js
hoo_frontend/VueSrc/: Hoo.vue  main.ts
hoo_frontend/VueSrc/common/: constants.ts
hoo_frontend/VueSrc/common/api/: animations.ts  lights.ts
hoo_frontend/VueSrc/components/: AnimationControls.vue
hoo_frontend/old/public/: index.html
hoo_frontend/old/src/components/: AnimationControls.vue  LightControls.vue
hoo_frontend/public/: index.html
hoo_frontend/src/: App.tsx  Hoo.css  Hoo.tsx  Hoo.vue  api.rs  app.rs  index.tsx  lib.rs
hoo_frontend/src/common/: constants.ts
hoo_frontend/src/common/api/: animations.ts  lights.ts
hoo_frontend/src/common/types/: light.ts  motion.ts
hoo_frontend/src/common/utils/: random.ts
hoo_frontend/src/components/: AnimationControls.tsx  AnimationControls.vue  LightControls.tsx  LightControls.vue  MotionSensors.vue
hoo_hue_api/: Cargo.toml
hoo_hue_api/src/: lib.rs  request.rs
hoo_hue_client/: Cargo.toml
hoo_server/: Cargo.toml
hoo_server/hoo-frontend/: README.md  package-lock.json  package.json
hoo_server/hoo-frontend/src/: App.vue
hoo_server/hoo-frontend/src/components/: AnimationControls.vue  LightControls.vue
hoo_server/src/: config.rs  endpoints.rs  hue_client.rs  main.rs  options.rs  server.rs  service.rs  static_files.rs  utils.rs
hoo_server/src/server/: app_state.rs  common.rs
hoo_server/static/: controls.html  index.html
hoo_server/static/css/: app.f52b90aa.css
hoo_server/static/js/: app.cedcf7e2.js  app.cedcf7e2.js.map  app.e21cae5c.js  app.e21cae5c.js.map  chunk-vendors.71cf3d01.js  chunk-vendors.71cf3d01.js.map  chunk-vendors.b4d4e2b8.js  chunk-vendors.b4d4e2b8.js.map
hoohue_api/: Cargo.toml
hoohue_api/src/: color.rs  lib.rs  light.rs
src/: animation.rs  api.rs  color.rs  effects.rs  lib.rs  light.rs
