[package]
name = "hoo"
version = "0.1.0"
authors = ["picklenerd <jordan.t.grace@gmail.com>"]
edition = "2018"

[dependencies]
hoo_api = { path = "../hoo_api" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = "0.9"
rand = "0.6.1"
dotenv = "0.13.0"
actix = "0.7.9"