[package]
name = "hoo_base"
version = "0.1.0"
authors = ["picklenerd <jordan.t.grace@gmail.com>"]
edition = "2018"

[dependencies]
hoo_api = { path = "../hoo_api" }
actix = "0.7.9"
chrono = "0.4"
dotenv = "0.13.0"
failure = "0.1.5"
reqwest = "0.9"
rand = "0.6.1"
ron = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
