[package]
name = "hoo_base"
version = "0.1.0"
authors = ["picklenerd <jordan.t.grace@gmail.com>"]
edition = "2018"

[dependencies]
hoo_api = { path = "../hoo_api" }
actix = "0.9"
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
reqwest = { version = "0.10", features = ["blocking"] }
rand = "0.7"
ron = "0.5"
serde = { version = "1.0", features = ["derive"] }
