[package]
name = "hoo_base"
version = "0.1.0"
authors = ["picklenerd <jordan.t.grace@gmail.com>"]
edition = "2018"

[dependencies]
hoo_api = { path = "../hoo_api" }
anyhow = "1.0"
chrono = "0.4"
dotenv = "0.15"
reqwest = "0.10"
rand = "0.7"
ron = "0.5"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["sync"] }
