[package]
name = "hoo_frontend"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hoo_api_types = { path = "../hoo_api_types" }
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = "0.10"

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
