[package]
name = "hoo_server"
version = "0.1.0"
authors = ["picklenerd <jordan.t.grace@gmail.com>"]
edition = "2018"

[dependencies]
hoo_base = { path = "../hoo_base" }
hoo_api = { path = "../hoo_api" }
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-web = "2.0"
actix-rt = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.7"
